fix: hide redundant main language toggle from UI

--- a/notebooks/cis/cis_readiness.qmd
+++ b/notebooks/cis/cis_readiness.qmd
@@ -42,11 +42,15 @@ defaultLangKey = {
   return queryParam ?? defaultKey;
 }
 
-viewof masterLanguage = Inputs.radio(languages, {
-  label: "Main language toggle",
-  format: (d) => d.key,
-  value: languages.find((x) => x.key === defaultLangKey),
-})
+viewof masterLanguage = {
+  const el = Inputs.radio(languages, {
+    label: "Main language toggle",
+    format: (d) => d.key,
+    value: languages.find((x) => x.key === defaultLangKey),
+  })
+  el.style.display = 'none';
+  return el;
+}
 
 _lang = Lang.lg(masterLanguage.key)
 ```
