Update CIS notebooks and helpers

--- a/notebooks/cis/_cis_readiness_index.qmd
+++ b/notebooks/cis/_cis_readiness_index.qmd
@@ -631,11 +631,11 @@ section12Content = _lang(cis.section12Content)
 //| echo: false
 
 // Synchronized admin selectors for Section 1.2 - these sync with the master selectors
-viewof s12Admin0 = createSyncedAdminSelector(0, viewof selectedAdmin0, selectedAdmin0Value, uniqueAdmin0.map(d => ({ value: d, label: d })), "s12", "admin0Label", "admin0Placeholder")
+viewof s12Admin0 = createSyncedAdminSelector(0, viewof selectedAdmin0, uniqueAdmin0.map(d => ({ value: d, label: d })), "s12", cis?.admin0Label?.en || "Select Country (Fallback)", cis?.admin0Placeholder?.en || "Select countries...")
 
-viewof s12Admin1 = createSyncedAdminSelector(1, viewof selectedAdmin1, selectedAdmin1Value, admin1Options.map(d => ({ value: d, label: d })), "s12", "admin1Label", "admin1Placeholder")
+viewof s12Admin1 = createSyncedAdminSelector(1, viewof selectedAdmin1, admin1Options.map(d => ({ value: d, label: d })), "s12", _lang(cis.admin1Label), _lang(cis.admin1Placeholder))
 
-viewof s12Admin2 = createSyncedAdminSelector(2, viewof selectedAdmin2, selectedAdmin2Value, admin2Options.map(d => ({ value: d, label: d })), "s12", "admin2Label", "admin2Placeholder")
+viewof s12Admin2 = createSyncedAdminSelector(2, viewof selectedAdmin2, admin2Options.map(d => ({ value: d, label: d })), "s12", _lang(cis.admin2Label), _lang(cis.admin2Placeholder))
 ```
 
 ```{ojs}
