--- a/notebooks/cis/cis_readiness.qmd
+++ b/notebooks/cis/cis_readiness.qmd
@@ -58,28 +58,37 @@ _lang = Lang.lg(masterLanguage.key)
 ```{ojs}
 // Helper function to create synchronized admin selectors
 // This creates a new selector that stays in sync with the master
-createSyncedAdminSelector = function(level, masterView, masterValue, options, uniqueId, labelKey, placeholderKey) {
+// Helper function to create synchronized admin selectors
+// This creates a new selector that stays in sync with the master
+createSyncedAdminSelector = function(level, masterView, options, uniqueId, labelString, placeholderString) {
+  // Get initial value from master view
+  const initialValue = masterView.value ? masterView.value.slice() : [];
+
   // Create a new independent selector initialized with master's value
   const selector = multiSelect({
-    inputLabel: _lang(cis[labelKey]),
+    inputLabel: labelString,
     inputId: `admin${level}Select-${uniqueId}`,
-    placeholderText: _lang(cis[placeholderKey]),
+    placeholderText: placeholderString,
     options: options,
-    selected: masterValue ? masterValue.slice() : [], // Initialize with current master value
+    selected: initialValue,
     maxSelections: 10
   });
   
   // When this selector changes, update the master
   selector.addEventListener('input', () => {
-    masterView.value = selector.value;
-    masterView.dispatchEvent(new Event('input', { bubbles: true }));
+    // Check equality to avoid loops
+    if (JSON.stringify(masterView.value) !== JSON.stringify(selector.value)) {
+      masterView.value = selector.value;
+      masterView.dispatchEvent(new Event('input', { bubbles: true }));
+    }
   });
   
   // When master changes, update this selector
-  // This creates a reactive dependency on masterValue
-  if (masterValue && JSON.stringify(selector.value) !== JSON.stringify(masterValue)) {
-    selector.value = masterValue.slice();
-  }
+  masterView.addEventListener('input', () => {
+    if (JSON.stringify(selector.value) !== JSON.stringify(masterView.value)) {
+      selector.value = masterView.value ? masterView.value.slice() : [];
+    }
+  });
   
   return selector;
 }
