--- a/notebooks/cis/_cis_hazard_intersection.qmd
+++ b/notebooks/cis/_cis_hazard_intersection.qmd
@@ -12,11 +12,11 @@ section2Intro = _lang(cis.section2Intro)
 
 // Synchronized admin selectors for Section 2 - these sync with the master selectors
 // Note: createSyncedAdminSelector is defined in _cis_readiness_index.qmd
-viewof s2Admin0 = createSyncedAdminSelector(0, viewof selectedAdmin0, selectedAdmin0Value, uniqueAdmin0.map(d => ({ value: d, label: d })), "s2", "admin0Label", "admin0Placeholder")
+viewof s2Admin0 = createSyncedAdminSelector(0, viewof selectedAdmin0, uniqueAdmin0.map(d => ({ value: d, label: d })), "s2", _lang(cis.admin0Label), _lang(cis.admin0Placeholder))
 
-viewof s2Admin1 = createSyncedAdminSelector(1, viewof selectedAdmin1, selectedAdmin1Value, admin1Options.map(d => ({ value: d, label: d })), "s2", "admin1Label", "admin1Placeholder")
+viewof s2Admin1 = createSyncedAdminSelector(1, viewof selectedAdmin1, admin1Options.map(d => ({ value: d, label: d })), "s2", _lang(cis.admin1Label), _lang(cis.admin1Placeholder))
 
-viewof s2Admin2 = createSyncedAdminSelector(2, viewof selectedAdmin2, selectedAdmin2Value, admin2Options.map(d => ({ value: d, label: d })), "s2", "admin2Label", "admin2Placeholder")
+viewof s2Admin2 = createSyncedAdminSelector(2, viewof selectedAdmin2, admin2Options.map(d => ({ value: d, label: d })), "s2", _lang(cis.admin2Label), _lang(cis.admin2Placeholder))
 ```
 
 ```{ojs}
