--- a/notebooks/cis/_cis_implementation.qmd
+++ b/notebooks/cis/_cis_implementation.qmd
@@ -15,11 +15,11 @@ section31Intro = _lang(cis.section31Intro)
 
 // Synchronized admin selectors for Section 3 - these sync with the master selectors
 // Note: createSyncedAdminSelector is defined in _cis_readiness_index.qmd
-viewof s3Admin0 = createSyncedAdminSelector(0, viewof selectedAdmin0, selectedAdmin0Value, uniqueAdmin0.map(d => ({ value: d, label: d })), "s3", "admin0Label", "admin0Placeholder")
+viewof s3Admin0 = createSyncedAdminSelector(0, viewof selectedAdmin0, uniqueAdmin0.map(d => ({ value: d, label: d })), "s3", _lang(cis.admin0Label), _lang(cis.admin0Placeholder))
 
-viewof s3Admin1 = createSyncedAdminSelector(1, viewof selectedAdmin1, selectedAdmin1Value, admin1Options.map(d => ({ value: d, label: d })), "s3", "admin1Label", "admin1Placeholder")
+viewof s3Admin1 = createSyncedAdminSelector(1, viewof selectedAdmin1, admin1Options.map(d => ({ value: d, label: d })), "s3", _lang(cis.admin1Label), _lang(cis.admin1Placeholder))
 
-viewof s3Admin2 = createSyncedAdminSelector(2, viewof selectedAdmin2, selectedAdmin2Value, admin2Options.map(d => ({ value: d, label: d })), "s3", "admin2Label", "admin2Placeholder")
+viewof s3Admin2 = createSyncedAdminSelector(2, viewof selectedAdmin2, admin2Options.map(d => ({ value: d, label: d })), "s3", _lang(cis.admin2Label), _lang(cis.admin2Placeholder))
 ```
 
 ```{ojs}
