Update CIS readiness notebooks

--- a/notebooks/cis/cis_readiness.qmd
+++ b/notebooks/cis/cis_readiness.qmd
@@ -59,7 +59,7 @@ _lang = Lang.lg(masterLanguage.key)
 // Helper function to create synchronized admin selectors
 // This creates a new selector that stays in sync with the master
 // Helper function to create synchronized admin selectors
-// This creates a new selector that stays in sync with the master
+// This creates a new selector that stays in sync with the master (forced reload)
 createSyncedAdminSelector = function(level, masterView, options, uniqueId, labelString, placeholderString) {
   // Get initial value from master view
   const initialValue = masterView.value ? masterView.value.slice() : [];
