--- a/notebooks/cis/_cis_readiness_index.qmd
+++ b/notebooks/cis/_cis_readiness_index.qmd
@@ -897,11 +897,11 @@ section13Content = _lang(cis.section13Content)
 //| echo: false
 
 // Synchronized admin selectors for Section 1.3 - these sync with the master selectors
-viewof s13Admin0 = createSyncedAdminSelector(0, viewof selectedAdmin0, selectedAdmin0Value, uniqueAdmin0.map(d => ({ value: d, label: d })), "s13", "admin0Label", "admin0Placeholder")
+viewof s13Admin0 = createSyncedAdminSelector(0, viewof selectedAdmin0, uniqueAdmin0.map(d => ({ value: d, label: d })), "s13", _lang(cis.admin0Label), _lang(cis.admin0Placeholder))
 
-viewof s13Admin1 = createSyncedAdminSelector(1, viewof selectedAdmin1, selectedAdmin1Value, admin1Options.map(d => ({ value: d, label: d })), "s13", "admin1Label", "admin1Placeholder")
+viewof s13Admin1 = createSyncedAdminSelector(1, viewof selectedAdmin1, admin1Options.map(d => ({ value: d, label: d })), "s13", _lang(cis.admin1Label), _lang(cis.admin1Placeholder))
 
-viewof s13Admin2 = createSyncedAdminSelector(2, viewof selectedAdmin2, selectedAdmin2Value, admin2Options.map(d => ({ value: d, label: d })), "s13", "admin2Label", "admin2Placeholder")
+viewof s13Admin2 = createSyncedAdminSelector(2, viewof selectedAdmin2, admin2Options.map(d => ({ value: d, label: d })), "s13", _lang(cis.admin2Label), _lang(cis.admin2Placeholder))
 ```
 
 ```{ojs}
@@ -1167,11 +1167,11 @@ section14Content = _lang(cis.section14Content)
 //| echo: false
 
 // Synchronized admin selectors for Section 1.4 - these sync with the master selectors
-viewof s14Admin0 = createSyncedAdminSelector(0, viewof selectedAdmin0, selectedAdmin0Value, uniqueAdmin0.map(d => ({ value: d, label: d })), "s14", "admin0Label", "admin0Placeholder")
+viewof s14Admin0 = createSyncedAdminSelector(0, viewof selectedAdmin0, uniqueAdmin0.map(d => ({ value: d, label: d })), "s14", _lang(cis.admin0Label), _lang(cis.admin0Placeholder))
 
-viewof s14Admin1 = createSyncedAdminSelector(1, viewof selectedAdmin1, selectedAdmin1Value, admin1Options.map(d => ({ value: d, label: d })), "s14", "admin1Label", "admin1Placeholder")
+viewof s14Admin1 = createSyncedAdminSelector(1, viewof selectedAdmin1, admin1Options.map(d => ({ value: d, label: d })), "s14", _lang(cis.admin1Label), _lang(cis.admin1Placeholder))
 
-viewof s14Admin2 = createSyncedAdminSelector(2, viewof selectedAdmin2, selectedAdmin2Value, admin2Options.map(d => ({ value: d, label: d })), "s14", "admin2Label", "admin2Placeholder")
+viewof s14Admin2 = createSyncedAdminSelector(2, viewof selectedAdmin2, admin2Options.map(d => ({ value: d, label: d })), "s14", _lang(cis.admin2Label), _lang(cis.admin2Placeholder))
 ```
 
 ```{ojs}
