Fix admin region sync and standardize tooltip sizes
- Fixed HTML syntax error in multiSelect.ojs (missing quote in style attribute)
- Rewrote createSyncedAdminSelector to use Observable's Inputs.bind for reliable sync
- Added global tooltipStyle in uiComponents.ojs for consistent 14px tooltip text
- Applied tooltip styles globally in cis_readiness.qmd
- Removed redundant local tooltip CSS from _cis_hazard_intersection.qmd

--- a/notebooks/cis/_cis_hazard_intersection.qmd
+++ b/notebooks/cis/_cis_hazard_intersection.qmd
@@ -450,43 +450,8 @@ s2BivariateMap = {
   d3.select(".bivariateTip").remove();
   
   // Add CSS to override large tooltip styles from Section 1.1
-  if (!d3.select("style#bivariateTipStyles").node()) {
-    d3.select("head").append("style")
-      .attr("id", "bivariateTipStyles")
-      .text(`
-        .bivariateTip,
-        .bivariateLegendTip {
-          font-size: 14px !important;
-          padding: 10px 12px !important;
-          line-height: 1.5 !important;
-          background: rgba(255, 255, 255, 0.95) !important;
-          border: 1px solid #ccc !important;
-          border-radius: 4px !important;
-          box-shadow: 0 2px 8px rgba(0,0,0,0.15) !important;
-        }
-        .bivariateTip table,
-        .bivariateLegendTip table {
-          font-size: 14px !important;
-        }
-        .bivariateTip th,
-        .bivariateTip td,
-        .bivariateLegendTip th,
-        .bivariateLegendTip td {
-          padding: 4px 8px !important;
-          font-size: 14px !important;
-          line-height: 1.4 !important;
-        }
-        .bivariateTip th,
-        .bivariateLegendTip th {
-          font-weight: 600 !important;
-          font-size: 14px !important;
-        }
-        .bivariateTip *,
-        .bivariateLegendTip * {
-          font-size: 14px !important;
-        }
-      `);
-  }
+  // Local styles removed - now using global tooltipStyle from uiComponents.ojs imported in parent
+
   
   // Create tooltip matching Plot.tip style
   const tooltip = d3
