--- a/notebooks/cis/cis_readiness.qmd
+++ b/notebooks/cis/cis_readiness.qmd
@@ -18,7 +18,7 @@ cis = await FileAttachment(
 
 ```{ojs}
 // Import all UI components FIRST before any cells that use them
-import { atlasHero, downloadButton } from "/helpers/uiComponents.ojs";
+import { atlasHero, downloadButton, tooltipStyle } from "/helpers/uiComponents.ojs";
 import { atlasTOC, tocStyle } from "/helpers/toc.ojs";
 import { dropdownInput as multiSelect, dropdownCSS } from "/helpers/multiSelect.ojs";
 ```
@@ -57,40 +57,21 @@ _lang = Lang.lg(masterLanguage.key)
 
 ```{ojs}
 // Helper function to create synchronized admin selectors
-// This creates a new selector that stays in sync with the master
-// Helper function to create synchronized admin selectors
-// This creates a new selector that stays in sync with the master (forced reload)
+// Uses Observable's Inputs.bind to keep selectors in sync with master
 createSyncedAdminSelector = function(level, masterView, options, uniqueId, labelString, placeholderString) {
-  // Get initial value from master view
-  const initialValue = masterView.value ? masterView.value.slice() : [];
-
-  // Create a new independent selector initialized with master's value
+  // Create a new selector
   const selector = multiSelect({
     inputLabel: labelString,
     inputId: `admin${level}Select-${uniqueId}`,
     placeholderText: placeholderString,
     options: options,
-    selected: initialValue,
+    selected: masterView.value ? masterView.value.slice() : [],
     maxSelections: 10
   });
   
-  // When this selector changes, update the master
-  selector.addEventListener('input', () => {
-    // Check equality to avoid loops
-    if (JSON.stringify(masterView.value) !== JSON.stringify(selector.value)) {
-      masterView.value = selector.value;
-      masterView.dispatchEvent(new Event('input', { bubbles: true }));
-    }
-  });
-  
-  // When master changes, update this selector
-  masterView.addEventListener('input', () => {
-    if (JSON.stringify(selector.value) !== JSON.stringify(masterView.value)) {
-      selector.value = masterView.value ? masterView.value.slice() : [];
-    }
-  });
-  
-  return selector;
+  // Use Inputs.bind to bind this selector to the master
+  // This creates a two-way binding between the selectors
+  return Inputs.bind(selector, masterView);
 }
 ```
 
@@ -104,6 +85,7 @@ nbTitle = _lang({
   fr: "Identifiant la Readiness des informations climatiques",
 });
 atlasHero(nbTitle, hero_url);
+tooltipStyle
 ```
 
 
