Fix tooltip sizes to be larger and readable
- Updated CSS to use 18px font size for SVG tooltips
- Added fontSize: 14 to Plot.tip configurations
- Removed transform:scale which was causing position offset
- Added global tooltip styles in uiComponents.ojs

--- a/notebooks/cis/_cis_readiness_index.qmd
+++ b/notebooks/cis/_cis_readiness_index.qmd
@@ -480,6 +480,7 @@ s11MapData = {
               s11MapData.features,
               Plot.pointer(
                 Plot.centroid({
+                  fontSize: 14,
                   channels: {
                     region: {
                       label: "Region",
@@ -534,6 +535,7 @@ s11MapData = {
               s11MapData.features,
               Plot.pointer(
                 Plot.centroid({
+                  fontSize: 14,
                   channels: {
                     region: {
                       label: "Region",
@@ -784,6 +786,7 @@ s12MapData = {
           s12MapData.features,
           Plot.pointer(
             Plot.centroid({
+              fontSize: 14,
               channels: {
                 region: {
                   label: "Region",
@@ -1334,6 +1337,7 @@ s14MapData = {
           allFeatures,
           Plot.pointer(
             Plot.centroid({
+              fontSize: 14,
               channels: {
                 region: {
                   label: "Region",
