--- a/notebooks/cis/_cis_implementation.qmd
+++ b/notebooks/cis/_cis_implementation.qmd
@@ -869,6 +869,7 @@ s3BivariateMap = {
         Plot.tip(
           allTipData,
           Plot.pointer({
+            fontSize: 14,
             x: (d) => d.cis_readiness_avg != null ? d.cis_readiness_avg : d.accessValue,
             y: "admin0_name",
             channels: {
@@ -1049,6 +1050,7 @@ s3BivariateMap = {
             Plot.tip(
               facetData,
               Plot.pointer({
+                fontSize: 14,
                 x: "cis_readiness_avg",
                 y: "accessValue",
                 fx: "accessType",
