Fix bivariate legend labels and position
- Rotated legend labels to run parallel with diamond edges (-45° and +45°)
- Added arrow indicators to labels for directionality
- Fixed Section 3 legend visibility by increasing viewBox height and adjusting legend Y position

--- a/notebooks/cis/_cis_hazard_intersection.qmd
+++ b/notebooks/cis/_cis_hazard_intersection.qmd
@@ -779,29 +779,30 @@ s2BivariateMap = {
     // Rotate the entire legend 45 degrees to make it a diamond
     legendContent.attr("transform", `rotate(45, ${centerX}, ${centerY})`);
     
-    // Axis labels parallel to the diamond edges
-    // CIS Readiness label (horizontal, below the legend)
+    // Axis labels rotated to run parallel with the diamond edges
+    // CIS Readiness label (along the bottom-right edge of the diamond, rotated -45°)
     selection
       .append("text")
-      .attr("x", centerX)
-      .attr("y", totalHeight + 40)
-      .attr("font-size", "11")
+      .attr("x", centerX + 60)
+      .attr("y", totalHeight + 20)
+      .attr("font-size", "12")
       .attr("fill", "#333")
       .attr("font-weight", "600")
       .attr("text-anchor", "middle")
-      .text("CIS Readiness");
+      .attr("transform", `rotate(-45, ${centerX + 60}, ${totalHeight + 20})`)
+      .text("CIS Readiness →");
     
-    // Hazard Severity label (vertical, to the right of the legend)
+    // Hazard Severity label (along the top-right edge of the diamond, rotated +45°)
     selection
       .append("text")
-      .attr("x", totalWidth + 40)
-      .attr("y", centerY)
-      .attr("font-size", "11")
+      .attr("x", totalWidth + 60)
+      .attr("y", centerY - 30)
+      .attr("font-size", "12")
       .attr("fill", "#333")
       .attr("font-weight", "600")
       .attr("text-anchor", "middle")
-      .attr("transform", `rotate(-90, ${totalWidth + 40}, ${centerY})`)
-      .text("Hazard Severity");
+      .attr("transform", `rotate(45, ${totalWidth + 60}, ${centerY - 30})`)
+      .text("Hazard Severity →");
     
     return selection;
   }
