--- a/notebooks/cis/_cis_implementation.qmd
+++ b/notebooks/cis/_cis_implementation.qmd
@@ -612,7 +612,7 @@ s3BivariateMap = {
   // Expand viewBox to accommodate rotated legend (negative X for labels, reduced height for tighter integration)
   const svg = d3
     .create("svg")
-    .attr("viewBox", [-50, 0, 950, 720])
+    .attr("viewBox", [-50, 0, 950, 850])
     .attr("style", "overflow: visible;")
     .attr("title", "Bivariate Map");
   
@@ -746,29 +746,30 @@ s3BivariateMap = {
     // Rotate the entire legend 45 degrees to make it a diamond
     legendContent.attr("transform", `rotate(45, ${centerX}, ${centerY})`);
     
-    // Axis labels parallel to the diamond edges
-    // CIS Readiness label (horizontal, below the legend)
+    // Axis labels rotated to run parallel with the diamond edges
+    // CIS Readiness label (along the bottom-right edge of the diamond, rotated -45°)
     selection
       .append("text")
-      .attr("x", centerX)
-      .attr("y", totalHeight + 40)
-      .attr("font-size", "11")
+      .attr("x", centerX + 60)
+      .attr("y", totalHeight + 20)
+      .attr("font-size", "12")
       .attr("fill", "#333")
       .attr("font-weight", "600")
       .attr("text-anchor", "middle")
-      .text(_lang(cis.s3ReadinessLabel));
+      .attr("transform", `rotate(-45, ${centerX + 60}, ${totalHeight + 20})`)
+      .text(_lang(cis.s3ReadinessLabel) + " →");
     
-    // Access label (vertical, to the right of the legend)
+    // Access label (along the top-right edge of the diamond, rotated +45°)
     selection
       .append("text")
-      .attr("x", totalWidth + 40)
-      .attr("y", centerY)
-      .attr("font-size", "11")
+      .attr("x", totalWidth + 60)
+      .attr("y", centerY - 30)
+      .attr("font-size", "12")
       .attr("fill", "#333")
       .attr("font-weight", "600")
       .attr("text-anchor", "middle")
-      .attr("transform", `rotate(-90, ${totalWidth + 40}, ${centerY})`)
-      .text(s3CurrentAccessLabel);
+      .attr("transform", `rotate(45, ${totalWidth + 60}, ${centerY - 30})`)
+      .text(s3CurrentAccessLabel + " →");
     
     return selection;
   }
@@ -777,7 +778,7 @@ s3BivariateMap = {
   // Position legend at bottom-left with enough space for rotated diamond and labels
   // Account for rotation: when rotated 45°, the diagonal extends sqrt(2)/2 * size in each direction
   const legendX = 50; // More space from left edge to accommodate labels
-  const legendY = 590; // Position integrated with map area (reduced from 630)
+  const legendY = 520; // Moved up to ensure full visibility
   const legendGroup = svg
     .append("g")
     .attr("transform", `translate(${legendX}, ${legendY})`);
