Fix Section 1.3 delta calculation consistency
- Changed delta from (shortTerm - longTerm) to (longTerm - shortTerm)
- Now matches chart label 'Δ (Long − Short)'
- Fixed null check to use != null instead of truthy check

--- a/notebooks/cis/_cis_readiness_index.qmd
+++ b/notebooks/cis/_cis_readiness_index.qmd
@@ -957,7 +957,7 @@ s13Data = {
       admin: adminName,
       shortTerm: shortTerm,
       longTerm: longTerm,
-      delta: shortTerm && longTerm ? shortTerm - longTerm : null,
+      delta: shortTerm != null && longTerm != null ? longTerm - shortTerm : null,
       interpretation: classification.interpretation,
       implication: classification.implication
     };
