Add admin2 filtering to Section 2 CIS Readiness × hazard map

--- a/notebooks/cis/_cis_hazard_intersection.qmd
+++ b/notebooks/cis/_cis_hazard_intersection.qmd
@@ -201,11 +201,13 @@ s2ProcessedData = {
     );
   }
   // Admin1 selected - show all admin2 data for selected admin1 regions
+  // If specific admin2 regions are selected, filter to only those
   else {
     filtered = filtered.filter(d => 
       selectedAdmin0.includes(d.admin0_name) &&
       selectedAdmin1.includes(d.admin1_name) &&
-      d.admin2_name != null
+      d.admin2_name != null &&
+      (selectedAdmin2.length === 0 || selectedAdmin2.includes(d.admin2_name))
     );
   }
   
