Fix Section 3.1 scatter plot faceting - remove redundant facet object

--- a/notebooks/cis/_cis_implementation.qmd
+++ b/notebooks/cis/_cis_implementation.qmd
@@ -984,11 +984,8 @@ s3BivariateMap = {
           },
           fx: {
             label: null,
-            padding: 0.05
-          },
-          facet: {
-            data: facetData,
-            x: "accessType"
+            padding: 0.05,
+            domain: [_lang(cis.s3AccessCombined), _lang(cis.s3AccessInternet), _lang(cis.s3AccessTV), _lang(cis.s3AccessCellphone)]
           },
           marks: [
             // Diagonal reference line (parity) - one per facet
