Add Methods & Sources appendix section with data sources, methodology, acknowledgements

--- a/notebooks/cis/cis_readiness.qmd
+++ b/notebooks/cis/cis_readiness.qmd
@@ -108,9 +108,27 @@ overviewContent = _lang(cis.overviewContent);
 
 # `{ojs} appendix` {#appendix}
 
+## `{ojs} _lang(cis.methodsTitle)` {#methods-sources}
+
+`{ojs} _lang(cis.methodsContent)`
+
+### `{ojs} _lang(cis.dataSourcesTitle)`
+
+`{ojs} md(_lang(cis.dataSourcesList))`
+
+### `{ojs} _lang(cis.methodologyTitle)`
+
+`{ojs} _lang(cis.methodologyContent)`
+
+### `{ojs} _lang(cis.acknowledgementsTitle)`
+
+`{ojs} _lang(cis.acknowledgementsContent)`
+
+---
+
 ```{ojs}
 toc_bottom = atlasTOC({
-  skip: ["notebook-title", "appendix", "source-code"], // These should be the section headings in the {# headings}
+  skip: ["notebook-title", "appendix", "source-code", "methods-sources"], // These should be the section headings in the {# headings}
   heading: `${Lang.toSentenceCase(_lang(general_translations.toc))}`,
 });
 
