Fix appendix: remove heading ID visibility and data sources section

--- a/notebooks/cis/cis_readiness.qmd
+++ b/notebooks/cis/cis_readiness.qmd
@@ -108,13 +108,13 @@ overviewContent = _lang(cis.overviewContent);
 
 # `{ojs} appendix` {#appendix}
 
-## `{ojs} _lang(cis.methodsTitle)` {#methods-sources}
+```{ojs}
+methodsTitle = _lang(cis.methodsTitle)
+```
+
+## `{ojs} methodsTitle`
 
 `{ojs} _lang(cis.methodsContent)`
-
-### `{ojs} _lang(cis.dataSourcesTitle)`
-
-`{ojs} md(_lang(cis.dataSourcesList))`
 
 ### `{ojs} _lang(cis.methodologyTitle)`
 
@@ -128,7 +128,7 @@ overviewContent = _lang(cis.overviewContent);
 
 ```{ojs}
 toc_bottom = atlasTOC({
-  skip: ["notebook-title", "appendix", "source-code", "methods-sources"], // These should be the section headings in the {# headings}
+  skip: ["notebook-title", "appendix", "source-code"], // These should be the section headings in the {# headings}
   heading: `${Lang.toSentenceCase(_lang(general_translations.toc))}`,
 });
 
